:page_facing_up: Add licence and links to repo

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,10 @@ permissions:
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - "main"
+    tags:
+      - "v*.*.*"
   release: # This will publish on every release
     types: [ published ]
 
