--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydantic-consul-settings"
-version = "1.0.4"
+version = "0.0.0"
 description = "Add Consul as source of env variable to settings"
 authors = ["Jag_k <jag-k@users.noreply.github.com>"]
 license = "MIT"
@@ -13,8 +13,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pydantic = "^2.6.3"
-pydantic-settings = "^2.2.1"
+pydantic = "^2"
+pydantic-settings = "^2"
 python-consul2 = "^0.1.5"
 
 
@@ -24,9 +24,27 @@ ruff = "^0.2.2"
 ssort = "^0.12.4"
 ruff-lsp = "^0.0.52"
 
+[tool.poetry-dynamic-versioning]
+enable = true
+vcs = "git"
+style = "semver"
+
+[tool.poetry-dynamic-versioning.substitution]
+files = [
+    "pydantic_consul_settings/version.py",
+]
+
+[tool.poetry-dynamic-versioning.files."pydantic_consul_settings/version.py"]
+persistent-substitution = true
+initial-content = """
+# These version placeholders will be replaced later during substitution.
+__version__ = "0.0.0"
+__version_tuple__ = (0, 0, 0)
+"""
+
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
 
 
 # https://docs.astral.sh/ruff/
