--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python package
 
 permissions:
@@ -14,7 +11,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -28,6 +24,11 @@ jobs:
           python-version: '3.11'
           cache: 'poetry'
 
+      - name: Install dependencies
+        run: poetry install
+
+      - name: Run linting
+        run: poetry run pre-commit run --all-files
 
       - name: Publish to PyPI
         env:
